@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2008-02-24  Warren L. DeLano <warren@delsci.com>	
+
+	* select now applies validate_object_names to selection name
+	
 2008-02-23  Warren L. DeLano <warren@delsci.com>	
 
 	* fixed a fitting bug with degenerate cases
